# api/swagger/swagger.yaml
@@ -83,6 +83,52 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
+  /mosquito/{kind}/{country}:
+     # binds a127 app logic to a route
+    x-swagger-router-controller: general
+    x-volos-apply:
+       # Applies the cache to our endpoint
+      cache:
+         # Gets the cache name by calling
+         # cacheKey() in /helpers/volos.js
+        key:
+            helper: volos
+            function: cacheMosquitoByCountry
+    get:
+      description: Returns all metadata regarding mosquito prevelence for requested country - arg, bra, col...etc.
+      parameters:
+        - name: kind
+          type: string
+          in: path
+          required: true
+        - name: country
+          type: string
+          in: path
+          required: true
+       # used as the method name of the controller
+      operationId: getPopulationByCountry
+      responses:
+        "200":
+          description: Success
+          examples:
+            application/json: {
+                              "country": "afg",
+                              "source": "simon_hay",
+                              "kind": "aegypti",
+                              "mosquito_prevelence": {
+                                "afg_1_16_170_gadm2-8": 0.0628956609969974,
+                                "afg_1_25_250_gadm2-8": 0.0167634032894597,
+                                "afg_1_11_103_gadm2-8": 0.0821634181047418
+                                }
+                              }
+          schema:
+             # a pointer to a definition
+            $ref: "#/definitions/MosquitoCountryResponse"
+         # responses may fall through to errors
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
   #/population/{format}/{country}:
   /population:
     # binds a127 app logic to a route
@@ -320,6 +366,21 @@ definitions:
       kind:
         type: string
       cases:
+        type: object
+  MosquitoCountryResponse:
+    required:
+      - country
+      - source
+      - raster
+      - mosquito_prevelence
+    properties:
+      country:
+        type: 'string'
+      source:
+        type: 'string'
+      raster:
+        type: 'string'
+      mosquito_prevelence:
         type: object
 
   ErrorResponse:
